# rectify

./: .gitignore  cabal.project  flake.nix  hie.yaml  spago.yaml
infra/: aws-ec2.nix  aws-f2.nix  aws-s3-frontend.nix  nixos-config.nix
infra/libf1wrap/: CMakeLists.txt
infra/terraform/: aws-f1.nix
nixos/: common.nix  f1.nix
rectify-backend/: rectify-backend.cabal
rectify-backend/app/: Ex.hs  Main.hs
rectify-backend/src/: App.hs  Config.hs  Effect.hs  Helpers.hs  Oleg.hs  Problem.hs  RandoNeur.hs  Random.hs  SimulatedAnnealing.hs  Surface.hs
rectify-backend/src/App/: API.hs  Main.hs  WsApp.hs
rectify-backend/src/SimulatedAnnealing/Surface/: Change.hs  Circular.hs  Config.hs  Index.hs  LinAlg.hs  Problem.hs  Surface2D.hs
rectify-backend/src/SimulatedAnnealing/TSP/: Problem.hs
rectify-backend/src/Surface/: Change.hs  Circular.hs  Index.hs  LinAlg.hs  Problem.hs  Surface.hs
rectify-backend/src/TSP/: Oleg.hs  Problem.hs
rectify-backend/src/Util/: Debug.hs  Index.hs  LinAlg.hs
rectify-backend/test/: Main.hs
rectify-backend/test/Spec/: LinAlg.hs
rectify-backend/test/Spec/Surface/: Change.hs
rectify-clash/: .ghc.environment.aarch64-darwin-9.6.5  .ghc.environment.aarch64-darwin-9.8.4  cabal.project  hie.yaml  reservoir.cabal
rectify-clash/src/: Shakefile.hs
rectify-clash/src/Reservoir/: Matrix.hs  Project.hs
rectify-clash/tests/: unittests.hs
rectify-clash/tests/Tests/Reservoir/: Project.hs
rectify-frontend/: index.html  index.js  package-lock.json  package.json  spago.yaml
rectify-frontend/src/: Algorithm.purs  Backend.purs  Button.js  Button.purs  Diagram.purs  Main.purs  RunCommand.purs
rectify-frontend/src/Backend/: Dynamics.purs  Optimization.purs  Surface.purs  TSP.purs
rectify-frontend/src/Backend/Dynamics/: Duffing.purs  HarmonicOscillator.purs  Lorenz.purs  VanDerPol.purs
rectify-frontend/src/Backend/Optimization/: Algorithm.purs  Problem.purs  TimeSeries.purs
rectify-frontend/src/Backend/Optimization/Problem/: Reservoir.purs  Surface.purs  TSP.purs
rectify-frontend/src/Component/: Banner.purs  Button.purs  Canvas.purs  Diagram.purs  Dynamics.purs  Energy.purs  Optimization.purs  Parent.purs  TabbedCanvas.purs  Tabs.purs  Temperature.purs
rectify-frontend/src/Component/Diagram/: Canvas.purs  Energy.purs  Temperature.purs  TimeSeries.purs
rectify-frontend/src/Component/Dynamics/: Three.js  Three.purs
rectify-frontend/src/Component/Optimization/: Button.purs  Diagram.purs  RunCommand.purs  Tabs.purs
rectify-frontend/src/Component/Optimization/Diagram/: Canvas.purs  Energy.purs  Temperature.purs  TimeSeries.purs
rectify-frontend/src/Diagram/: Surface.purs  TSP.purs  TimeSeries.purs
rectify-frontend/went-stuff/purescript-gojs/: README.md  package.json  spago.yaml
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/: Class.purs  Collection.js  Collection.purs  Debug.js  Debug.purs  Diagram.purs  EnumValue.js  EnumValue.purs  Key.js  Key.purs  L.purs  Layout.purs  Model.purs  Prototype.purs  Tool.purs  Unsafe.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Diagram/: Constructors.purs  Methods.js  Methods.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Diagram/Animation/: Constructors.purs  Methods.purs  Properties.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Diagram/AnimationManager/: Constructors.purs  Methods.purs  Properties.purs  Static.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Diagram/AnimationTrigger/: Constructors.purs  Methods.purs  Properties.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Diagram/CommandHandler/: Methods.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Geometry/: Constructors.js  Constructors.purs  Methods.purs  Properties.purs  Static.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/GraphObject/: Constructors.js  Constructors.purs  Methods.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Layout/: Constants.js  Constants.purs  Methods.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Model/: Constructors.purs  Methods.purs  Properties.purs  Static.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/RowColumnDefinition/: Constructors.purs  Methods.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Tool/: Methods.purs  MouseDownTools.purs  MouseMoveTools.purs  MouseUpTools.purs  Properties.purs  Types.purs
rectify-frontend/went-stuff/purescript-gojs/src/GoJS/Unsafe/: Constructor.js  Constructor.purs  Get.js  Get.purs  InstanceOf.js  InstanceOf.purs  Method.js  Method.purs  Prototype.js  Prototype.purs  Set.js  Set.purs  Static.js  Static.purs
rectify-frontend/went-stuff/purescript-went/: README.md
rectify-frontend/went-stuff/purescript-went/src/Went/: Geometry.purs  GraphObject.purs  Layout.purs  Model.purs  Tool.purs
rectify-frontend/went-stuff/purescript-went/src/Went/Diagram/: Make.purs
rectify-frontend/went-stuff/purescript-went/src/Went/FFI/: Class.purs
rectify-frontend/went-stuff/purescript-went/src/Went/Geometry/: Brush.purs
rectify-frontend/went-stuff/purescript-went/src/Went/GraphObject/: EnumValue.purs  Make.purs  Panel.purs  Picture.purs  Placeholder.purs  Shape.purs  TextBlock.purs
rectify-frontend/went-stuff/purescript-went/src/Went/Layout/: EnumValue.purs  Make.purs
rectify-frontend/went-stuff/purescript-went/src/Went/Model/: Make.purs
rectify-frontend/went-stuff/purescript-went/src/Went/Tool/: ClickCreatingTool.purs  DragSelectingTool.purs  LinkingBaseTool.purs  RelinkingTool.purs
rectify-lean/: lake-manifest.json  lakefile.lean
rectify-lean/app/: Main.lean
rectify-lean/src/: Rectify.lean
rectify-lean/src/Rectify/: Dynamics.lean  Json.lean  WebSockets.c  WebSockets.lean
rectify-lean/src/Rectify/Dynamics/: DoublePendulum.lean  DuffingOscillator.lean  HarmonicOscillator.lean  Lorenz.lean  VanDerPolOscillator.lean
(+218 files in other folders)
