cabal-version:      2.2
name:               rectify-backend

version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Deco
maintainer:         decomuricy@gmail.com
category:           None

common defaults
  default-language: GHC2021
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    -- MonadFailDesugaring
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

library
    import: defaults
    exposed-modules: 
        SimulatedAnnealing
        Problem
        Surface
        Surface.LinAlg
        Surface.Circular
        Surface.Index
    other-modules:
    build-depends:    
        base
      -- hmatrix breaks with the old missing blas, lapack in nix develop if an MTL version is specified
      --, hmatrix
      , aeson
      , generic-lens
      , lens
      , vector-sized
      , finite-typelits
      , random
      -- This is chosen because it's fast to generate random numbers
      , splitmix
      , effectful
      , effectful-th
      , transformers
      -- Oleg
      , deepseq
      , containers
      , vector
      , pretty-simple

    hs-source-dirs:   src

executable rectify
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , rectify-backend
    -- Starting web server
    , servant
    , servant-server
    , warp
    , wai
    , wai-cors
    , wai-websockets
    , websockets
    , servant-websockets
    , aeson
    , rio
    , stm
    , text
    , unliftio
    , pretty-simple


test-suite rectify-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Spec.LinAlg
  main-is: Main.hs
  build-depends:
      base
    , rectify-backend
    , hedgehog
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021