cabal-version:      2.2
name:               rectify-backend

version:            0.1.0.0
synopsis:
homepage:
license:            NONE
author:             Deco
maintainer:         decomuricy@gmail.com
category:           None

common defaults
  default-language: GHC2021
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DoAndIfThenElse
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    -- MonadFailDesugaring
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

library
  import: defaults
  hs-source-dirs:   src
  exposed-modules:
      App
      SimulatedAnnealing
      Problem
      Surface
      Surface.LinAlg
      Surface.Circular
      Surface.Index
      TSP.Problem
  other-modules:
      Helpers
  build-depends:    
      base
    -- hmatrix breaks with the old missing blas, lapack in nix develop if an MTL version is specified
    --, hmatrix
    , aeson
    , generic-lens
    , lens
    , vector-sized
    , finite-typelits
    , random
    -- This is chosen because it's fast to generate random numbers
    , splitmix
    -- For ReaderT
    , transformers
    , containers
    , pretty-simple
    -- application/server/web stuff
    , servant
    , servant-server
    , servant-websockets
    , stm
    , unliftio
    , warp
    , wai
    , wai-cors
    , wai-websockets
    , websockets

executable rectify
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , rectify-backend


test-suite rectify-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  other-modules:
    Spec.LinAlg
  main-is: Main.hs
  build-depends:
      base
    , rectify-backend
    , hedgehog
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: GHC2021